changed css to deal with alignment issue

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -33,7 +33,7 @@ nav {
         1px 1px 0 #000;
     }
 
-form {
+.form-control {
     max-width: 30em;
 
 }
